public/style.css
* {
    font-family: "Euclid Circular B Bold", sans-serif;
    color: var(--color);
    background-color: var(--bgColor);
}

body {
    margin: 0;
}

h1 {
    -webkit-text-fill-color: transparent;
    font-size: 4vw;
    letter-spacing: 0.5vw;
    padding: 0;
    margin: 0;
    margin-left: 2.1vw;
}

h2 {
    font-size: 3.5vw;
    letter-spacing: 0.1vw;
    padding: 0;
    margin: 0;
    text-align: center;
}

h3 {
    font-size: 2vw;
    letter-spacing: 0.05vw;
    padding: 0;
    margin: 0;
    text-align: center;
}

li {
    font-size: 1.5vw;
    letter-spacing: 0.1vw;
    margin: 0 1vw 0;
    padding: 0;
}

.container {
    display: flex;
    width: 100%;
    height: 100vh;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
}

nav {
    display: flex;
    width: 100%;
    height: 10vw;
    align-items: center;
    justify-content: space-evenly;
}

ul {
    padding: 0;
    margin: 0;
    display: flex;
    width: 80%;
    list-style-type: none;
    margin-right: 1.9vw;
}

p {
    font-size: 1.2vw;
    letter-spacing: 0.25vw;
    padding: 0;
    margin: 0;
}

section {
    margin: 5vw 0 5vw;
    display: flex;
    width: 100%;
    justify-content: space-around;
}

.model {
    width: 35vw;
    height: 25vw;
}

.wrap {
    max-width: 35vw;
    text-align: justify;
}

a {
    text-decoration: none;
}

.hover-underline-animation {
    /* https://www.30secondsofcode.org/css/s/hover-underline-animation */
    display: inline-block;
    position: relative;
}

.hover-underline-animation:after {
    /* https://www.30secondsofcode.org/css/s/hover-underline-animation */
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 0.15vw;
    bottom: -0.25vw;
    left: 0;
    background-color: var(--color);
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
}

.hover-underline-animation:hover:after {
    /* https://www.30secondsofcode.org/css/s/hover-underline-animation */
    color: var(--color);
    transform: scaleX(1);
    transform-origin: bottom left;
}

footer {
    display: flex;
    width: 100%;
    height: 7.5vw;
    align-items: center;
    justify-content: space-evenly;
}

footer p {
    white-space: nowrap;
    margin-right: 2.5vw;
    font-size: 0.75vw;
}

table {
    font-size: 1.75vw;
    letter-spacing: 0.15vw;
    padding: 0;
    margin: 0;
    border: 0.25vw solid var(--color);
    border-radius: 2px;
}

th {
    padding: 1vw;
    text-align: center;
}

td {
    font-size: 1vw;
    padding: 1vw;
    text-align: center;
}

form {
    border: 0.25vw solid var(--color);
    border-radius: 2px;
}

input,
textarea,
button {
    background-color: #000000;
    font-size: 2vw;
    border-color: var(--color);
    outline: none;
    border-radius: 2px;
    border: 0.25vw solid var(--color);
}

form {
    padding: 2vw;
    width: 40vw;
}

label {
    font-size: 2vw;
    letter-spacing: 0.1vw;
    padding: 0;
    margin: 0;
    text-align: left;
    margin: 1vw 0 1vw;
}

button {
    margin-top: 2vw;
    color: var(--color);
}

form {
    display: flex;
    flex-direction: column;
}

#loader {
    position: absolute;
    left: 50%;
    top: 50%;
    z-index: 1;
    width: 120px;
    height: 120px;
    margin: -76px 0 0 -76px;
    border: 16px solid var(--bgColor);
    border-radius: 50%;
    border-top: 16px solid var(--color);
    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
}

@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

#media-grid {
    display: flex;
    margin: 15px;
}

#media-grid img {
    width: 23vw;
    height: 18vw;
    margin: 0 1vw;
}

#container {
    position: relative;
    text-align: center;
}

#media-grid img:hover {
    filter: blur(3px);
}

#media-grid img:hover+.centered,
.centered:hover {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: transparent;
    font-size: 1.5vw;
}

.centered {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.wrap p {
    font-family: "Euclid Circular B Medium", sans-serif;
}

#guides-container {
    position: relative;
    text-align: center;
}

#guides-media-grid a:hover {
    filter: blur(1px);
}

#guides-media-grid a:hover+.guides-centered,
.guides-centered:hover {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: transparent;
    font-size: 1.5vw;
}

.guides-centered {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#guides-media-grid {
    display: flex;
    margin: 15px;
}

#guides-media-grid img {
    filter: grayscale(100%);
    width: 23vw;
    height: 18vw;
    margin: 0 1vw;
    transition: filter 0.25s ease-out;
}

#guides-media-grid img:hover {
    filter: grayscale(0%);
    transition: filter 0.25s ease-in;
}

#active {
    /* https://www.30secondsofcode.org/css/s/hover-underline-animation */
    display: inline-block;
    position: relative;
}

#active:after {
    /* https://www.30secondsofcode.org/css/s/hover-underline-animation */
    content: '';
    position: absolute;
    width: 100%;
    height: 0.15vw;
    bottom: -0.25vw;
    left: 0;
    background-color: var(--color);
}

#active:hover:after {
    /* https://www.30secondsofcode.org/css/s/hover-underline-animation */
    transform: scaleX(1);
}

.guides-container {
    display: flex;
    width: 100%;
    justify-content: space-around;
}

.guide {
    text-align: justify;
    max-width: 45vw;
}

